chore: review error handling and response
add background firing od analyzer
