# docs/swagger.yaml
@@ -21,17 +21,39 @@ paths:
                 file:
                   type: string
                   format: binary
+                processImmediately:
+                  type: boolean
+                  description: "If true, analysis starts immediately in background"
       responses:
         '200':
           description: Successful operation
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Document'
+                type: object
+                properties:
+                  message:
+                    type: string
+                  document:
+                    $ref: '#/components/schemas/Document'
         '400':
           description: Bad Request
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
         '500':
           description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
 
   /documents/{id}/analyze:
     post:
